syntax = "proto3";

package com.wisc.raft.proto;
import "cluster.proto";
import "raft.proto";



service AutoScale{
  rpc requestUpScale(ScaleRequest) returns (ScaleResponse);
  rpc requestDownScale(ScaleDownRequest) returns (ScaleResponse);
}

message ScaleDownRequest{
  sint32 mergeCount = 1;
  repeated ClusterConnect clusters=2;
}
message ScaleResponse{
  bool isCreated = 1;
  bool inProgress = 2;
  repeated ServerDetails subClusters = 3;
}

message ScaleRequest{
  sint32 clusterSize=1;
  sint32 absoluteMajority=2;

  //Can add read & write Majority
}

message ServerDetails{
  repeated ServerConnect serverConnects = 1;
}
